--- a/docs/team/leeeejian.adoc
+++ b/docs/team/leeeejian.adoc
@@ -3,7 +3,11 @@
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-This portfolio outlines my contributions to the project SecureIT.
+image::
+{empty}[https://github.com/eejian97[github]]
+Role: Developer, Analyst +
+Responsibilities: Code Quality
+
 
 == PROJECT: SecureIT
 
@@ -12,12 +16,77 @@ Project SecureIT was made possible with the combined effort of team F11-03 which
 The project was completed in November 2019 as part of a Software Engineering module (CS2103T) in the National University of Singapore.
 
 == Overview
-SecureIT is your all-in-one management tool for confidential information. The idea of creating SecureIT came about because
-my group and I felt that...
+Nowadays, digital is just how business gets done. Employees are more connected, and on more apps and websites than ever before.
+However, this transformation has also made managing thier digital life that much more complex.
+Many times, workers end up practicing bad and unsafe security habits (e.g. reusing the same password for all their various accounts).
 
+My group and I realised this problem, and hence set out to tackle this issue by creating **SecureIT**.
+
+SecureIT is designed to be your all-in-one management tool for all confidential information, and boasts management capabilities for:
+
+* Passwords
+
+* Secret Files
+
+* Secret Notes
+
+* Credit cards
+
+SecureIT targets workers in small and medium enterprises, as well as those in startups, where security enforcement tends to be looser.
 
 == Summary of contributions
-This section acts as a summary of my contributions to SecureIT.
+|===
+|_This section acts as a summary of my contributions to SecureIT._
+|===
+* *Major enhancement: the ability to analyse the level of security of the users' passwords.*
 
-* Major enhancement: I added the ability to analyse passwords.
-**
+** What it does: The password analysis feature provides the ability to evaluate the security level of each of the user's passwords from six unique aspects. Following which, users are able to view a either (i) a *summary report* for *all* passwords, or (ii) a *detailed report* for a *specific* password.
+The six aspects are:
+
+*** Unique Analysis: Checks that passwords are not the same.
+*** Similarity Analysis: Checks that passwords are not at least 70% similar.
+*** Strength Analysis: Checks that passwords are complex (length, character types.)
+*** Dictionary Analysis: Checks that passwords do not contain known commonly-used passwords.(e.g."password")
+*** Sequence Analysis: Checks that passwords do not contain commonly-used sequences. (e.g."ABC")
+*** Keyboard Analysis: Checks that passwords do not contain commonly-used keyboard patterns. (e.g."ASD")
+
+** Justification: This feature greatly improves the utility of SecureIT because it can provide users with insight as to how secure their passwords really are in, and in a simple, hassle-free, human-readable way.
+Each analysis aspect allows the user to identify different weaknesses in their password and thereby make the necessary corrections to ensure the security of each account.
+
+** Highlights: It was highly challenging to implement the analysis feature. Some of the key highlights include:
+
+*** Design: The design of the entire analysis component follows that of a *Command Pattern*. This greatly increases the extensibility of the analysis feature to accommodate even more types of analysis aspects in the future.
+Also, careful consideration was needed to design and encapsulate the various objects used in the entire analysis feature. (e.g. Analyser, Result, Match, AnalysisReport)
+*** Data structure and algorithms: The implementation of the various analysis aspects proved highly complex. Algorithms included the use of more complex concepts such as recursion and multiple pointers.
+The implementation also required knowledge on the use of more complex data structures such as TreeMaps and HashMaps in order to help boost the efficiency of the product.
+
+* *Major enhancement: the ability to generate random passwords.*
+
+** What is does: The password generation feature provides the ability to generate truly random and complex passwords to use whenever they need a new password.
+Users are also allowed to customise the configuration of the password generation in order to better suit thier needs. (e.g. length, character sets required)
+
+** Justification: This feature greatly improves the utility of SecureIT because it alleviates the user of needing to think of a password, and guarantees that the password provided is random and thereby secure.
+
+** Highlights: In-depth research was required on how best to generate truly random passwords, as even pseudo-random passwords would still be easily cracked.
+The generation of passwords leveraged on the Java .... API to encrypt...
+
+* *Code contributed:*
+
+* *Other contributions:*
+
+** Team contributions:
+*** ClipboardUtil
+*** Reported bugs and offered suggestions for teammates (examples: 1, 2, 3)
+*** Reviewed Pull Requests (with non-trivial review comments):
+** Project management:
+*** Helped decide the timeline for the project what to acheive in various stages
+*** Created and assigned issues to achieve for each milestone in the lead up to the project submission.
+** Documentation
+
+
+
+
+
+
+
+
