--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -8,7 +8,7 @@
 :imagesDir: images
 :stylesDir: stylesheets
 :xrefstyle: full
-:icons: font
+//:icons: font
 ifdef::env-github[]
 :tip-caption: :bulb:
 :note-caption: :information_source:
