--- a/docs/team/junhuplim.adoc
+++ b/docs/team/junhuplim.adoc
@@ -1,13 +1,13 @@
 = Lim Jun Hup - Project Portfolio for Athletick
 
-++++
-<link rel="stylesheet"  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css">
-++++
+//++++
+//<link rel="stylesheet"  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css">
+//++++
 
 :site-section: AboutUs
 :imagesDir: ../images
 :sectnums:
-:icons: font
+//:icons: font
 ifdef::env-github[]
 :note-caption: :information_source:
 endif::[]
